<resources>

    <!-- Common strings -->
        <string name="app_name">TravelTracker</string>
    
        <!-- Used in layouts -->
        <string name="date_format">mm/dd/yyyy</string>
        <string name="content_description_receipt_image">Receipt Image</string>
        <string name="geolocation_checkbox">Has Location</string>
        <string name="geolocation_view_button">View Location</string>
        <string name="edit_text_hint_text">Enter text</string>
        <string name="edit_text_hint_name">Name</string>
        <string name="error_no_name">Please enter a name</string>
    
        <!-- Used in menus -->
        <string name="sign_out">Sign Out</string>
        <string name="add_expense_item">Add Expense Item</string>

    <!-- Strings used in LoginActivity -->
        <!-- Used in layout -->
        <string name="login_login">Login</string>
        <string name="login_claimant">Claimant</string>
        <string name="login_approver">Approver</string>
    
    <!-- Strings used in ManageTagsActivity -->
        <string name="manage_tags_label">Manage Tags</string>
    
        <!-- Used in layout -->
        <string name="manage_tags_add_new_tag">Add New Tag</string>
        <string name="manage_tags_add">Add</string>
        
        <!-- Used in dialog -->
        <string name="manage_tags_dialog_rename">Rename</string>
        <string name="manage_tags_dialog_cancel">Cancel</string>
        
        <!-- Used in error -->
        <string name="manage_tags_tag_exists">" already exists!"</string>
    
    <!-- Strings used in ClaimsListActivity -->
        <string name="claims_list_label">Claims List</string>
        <string name="claims_list_home_location_failed">Failed to set home location</string>
        
        <!-- Used in menu -->
        <string name="claims_list_filter_by_tag">Filter By Tag</string>
        <string name="claims_list_manage_tags">Manage Tags</string>
        <string name="claims_list_add_claim">Add Claim</string>
        <string name="claims_list_set_home_location">Set Home Location</string>
    
    <!-- Strings used in ClaimsListRowItem -->
        <!-- Used in layout -->
        <string name="claims_list_row_item_total">Total:</string>
        <string name="claims_list_row_item_tags">Tags:</string>
        <string name="claims_list_row_item_distance_header">Distance from home location:</string>
        <string name="claims_list_row_item_distance_no_home">No home location set</string>
        <string name="claims_list_row_item_distance_no_dest">No destinations in claim</string>
        <string name="claims_list_row_item_distance_level_1">Very Close</string>
        <string name="claims_list_row_item_distance_level_2">Close</string>
        <string name="claims_list_row_item_distance_level_3">Distant</string>
        <string name="claims_list_row_item_distance_level_4">Very Distant</string>
        <string name="claims_list_row_item_distance_level_5">Extremely Distant</string>
        
    <!-- Strings used in ClaimInfoActivity -->
        <string name="claim_info_label">Claim Info</string>
    
        <!-- Used in layout -->
        <string name="claim_info_claimant_name">Claimant Name:</string>
        <string name="claim_info_date_to">to</string>
        <string name="claim_info_claim_status">Claim Status:</string>
        <string name="claim_info_destinations">Destinations:</string>
        <string name="claim_info_tags">Tags:</string>
        <string name="claim_info_view_tags">+</string>
        <string name="claim_info_currency_totals">Totals:</string>
        <string name="claim_info_view_items">View Expense Items (%1$d Total)</string>
        <string name="claim_info_approver">Approver:</string>
        <string name="claim_info_comments">Comments:</string>
        <string name="claim_info_claim_submit_button">Submit Claim</string>
        <string name="claim_info_claim_return_button">Return Claim</string>
        <string name="claim_info_claim_approve_button">Approve Claim</string>
        <string name="claim_info_comment_prompt">Enter Comment</string>
        <string name="claim_info_delete_message">Are you sure you want to delete this claim?</string>
        <string name="claim_info_start_date_error">Start date must not come after end date</string>
        <string name="claim_info_end_date_error">End date must not come before start date</string>
        <string name="claim_info_destination_edit_title">Destination Editor</string>
        <string name="claim_info_destination_edit_location">Name:</string>
        <string name="claim_info_destination_edit_fragment_title">Set Location</string>
        <string name="claim_info_destination_edit_reason">Reason:</string>
        <string name="claim_info_destination_error_geolocation">Destinations must have a location</string>
        <string name="claim_info_delete_destination">Are you sure you want to delete the following destination?</string>
        <string name="claim_info_submit_confirm">Submit claim for approval?</string>
        <string name="claim_info_not_submitted">Claim not submitted!</string>
        <string name="claim_info_submit_error_destination">Claim has no destinations! Expense items may also be incomplete. Submit anyway?</string>
        <string name="claim_info_submit_error_item">Some expense items have no description or are not marked complete! Submit anyway?</string>
        <string name="claim_info_submit_error_item_description">Some expense items have no description! Submit anyway?</string>
        <string name="claim_info_submit_error_item_completeness">Some expense items are not marked complete! Submit anyway?</string>
        <string name="claim_info_return_confirm">Return claim to claimant for revision?</string>
        <string name="claim_info_not_returned">Claim not returned to claimant!</string>
        <string name="claim_info_approve_confirm">Approve claim?</string>
        <string name="claim_info_not_approved">Claim not approved!</string>
        <string name="claim_info_no_comment_error">Comment is required</string>
        
        <!-- Used in menu -->
        <string name="claim_info_add_destination">Add Destination</string>
        <string name="claim_info_delete_claim">Delete Claim</string>

    <!-- Strings used in ExpenseItemsListActivity -->
        <string name="expense_items_list_label">Expense Items List</string>
     
    <!-- Strings used in ExpenseItemsListItemView -->
        <!-- Used in layout -->
        <string name="expense_items_list_incomplete">Incomplete</string>
        
    <!-- Strings used in ExpenseItemInfoActivity -->
        <string name="expense_item_info_label">Expense Item Info</string>
        
        <!-- Used in layout -->
        <string name="expense_item_info_is_complete">Complete</string>
        <string name="expense_item_info_date">Expense Date</string>
        <string name="expense_item_info_amount">Amount</string>
        <string name="expense_item_info_amount_hint">Enter amount</string>
        <string name="expense_item_info_category">Category</string>
        <string name="expense_item_info_description">Description</string>
        <string name="expense_item_info_remove_geolocation">Remove Location</string>
        <string name="expense_item_info_capture_receipt_message">Add a new receipt image?</string>
        <string name="expense_item_info_change_receipt_message">Change, delete or view current receipt image</string>
        <string name="expense_item_info_failed_to_get_image">Failed to get receipt image</string>
        <string name="expense_item_info_take_photo">Take photo</string>
        <string name="expense_item_info_choose_from_gallery">Choose from gallery</string>
        <string name="expense_item_info_delete_image">Delete image</string>
        <string name="expense_item_info_view_image">View image</string>
        <string name="expense_item_info_change_image">Change image</string>
        <string name="expense_item_info_no_receipt">No receipt attached!</string>
        
        <!-- Used in menu -->
        <string name="expense_item_info_delete_item">Delete Expense Item</string>
        
    <!-- Strings used in RecieptImageVeiwAcivity -->
        <string name="receipt_image_view_label">View Receipt Image</string>  
        
    <!-- Strings used in SelectLocationActivity -->
        <string name="select_location_label">Select Location</string>
        <string name="select_location_tap_to_select_location">Tap to select a location</string>
        <string name="select_location_location_selected">Location selected</string>
    
        
    <!-- Strings used in SelectLocationFragment -->
        <string name="select_location_fragment_select_location">Select location on map</string>
        <string name="select_location_fragment_current_location">Set to current location</string>
        <string name="select_location_fragment_default_title">Select Location</string>
        <string name="select_location_fragment_default_no_edit_title">Location</string>
        <string name="select_location_fragment_failed_to_get_location">Failed to get current location</string>
        <string name="select_location_fragment_not_connected">Not connected to Google Play</string>
        <string name="select_location_fragment_unset">No location set!</string>
        
    <!-- Strings used in SelectTagFragment -->
        <string name="select_tag_title">Select Tags</string>
        
    <!-- Strings used in SelectTagFilterFragment -->
        <string name="select_tag_filter_fragment_enable_filter">Enable filter</string>
        <string name="select_tag_filter_title">Tag Filter Settings</string>

    <!-- Strings used in enum ItemCategory -->
        <string name="enum_item_category_no_category">No Category</string>
        <string name="enum_item_category_accommodation">Accommodation</string>
        <string name="enum_item_category_air_fare">Air Fare</string>
        <string name="enum_item_category_fuel">Fuel</string>
        <string name="enum_item_category_ground_transport">Ground Transport</string>
        <string name="enum_item_category_meal">Meal</string>
        <string name="enum_item_category_miscellaneous">Miscellaneous</string>
        <string name="enum_item_category_parking">Parking</string>
        <string name="enum_item_category_private_automobile">Private Automobile</string>
        <string name="enum_item_category_registration">Registration</string>
        <string name="enum_item_category_supplies">Supplies</string>
        <string name="enum_item_category_vehicle_rental">Vehicle Rental</string>

    <!-- Strings used in enum ItemCurrency -->
        <string name="enum_item_currency_CAD">CAD</string>
        <string name="enum_item_currency_CHF">CHF</string>
        <string name="enum_item_currency_CNY">CNY</string>
        <string name="enum_item_currency_EUR">EUR</string>
        <string name="enum_item_currency_GBP">GBP</string>
        <string name="enum_item_currency_JPY">JPY</string>
        <string name="enum_item_currency_USD">USD</string>
        
    <!-- Strings used in enum Status -->
        <string name="enum_status_in_progress">In Progress</string>
        <string name="enum_status_submitted">Submitted</string>
        <string name="enum_status_returned">Returned</string>
        <string name="enum_status_approved">Approved</string>

    <!-- Strings used in enum UserRole -->
        <string name="enum_user_role_claimant">Claimant</string>
        <string name="enum_user_role_approver">Approver</string>
   
</resources>
