<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Expense_info_activity" >

    <CheckedTextView
        android:id="@+id/expenseItemInfoStatusCheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:text="@string/expense_item_info_is_complete" />

    <TextView
        android:id="@+id/expenseItemInfoExpenseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoStatusCheckedTextView"
        android:text="@string/expense_item_info_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/expenseItemInfoDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoExpenseDateTextView"
        android:text="@string/date_format" />

    <ImageView
        android:id="@+id/expenseItemInfoReceiptImageView"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/expenseItemInfoStatusCheckedTextView"
        android:layout_marginStart="72dp"
        android:layout_toEndOf="@+id/expenseItemInfoDateButton"
        android:contentDescription="@string/content_description_receipt_image"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/expenseItemInfoAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoDateButton"
        android:layout_marginTop="27dp"
        android:text="@string/expense_item_info_amount" />

    <Spinner
        android:id="@+id/expenseItemInfoCurrencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/expenseItemInfoReceiptImageView"
        android:layout_alignTop="@+id/expenseItemInfoAmountTextView" />

    <EditText
        android:id="@+id/expenseItemInfoAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/expenseItemInfoCurrencySpinner"
        android:layout_toEndOf="@+id/expenseItemInfoCategoryTextView"
        android:layout_toStartOf="@+id/expenseItemInfoCurrencySpinner"
        android:ems="10"
        android:hint="@string/expense_item_info_amount_hint"
        android:inputType="numberSigned|numberDecimal"
        android:imeOptions="actionDone" />

    <Spinner
        android:id="@+id/expenseItemInfoCategorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/expenseItemInfoAmountEditText"
        android:layout_alignTop="@+id/expenseItemInfoCategoryTextView" />

    <TextView
        android:id="@+id/expenseItemInfoCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoAmountEditText"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/expense_item_info_category" />
    
    <Button
        android:id="@+id/expenseItemInfoGeolocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoCategorySpinner"
        android:layout_marginTop="16dp"
        android:text="@string/geolocation_view_button" />

    <Button
        android:id="@+id/expenseItemInfoGeolocationRemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoGeolocationButton"
        android:text="@string/expense_item_info_remove_geolocation" />

    <!--
        Last two lines taken on April 3, 2015 from:
        http://stackoverflow.com/questions/3156781/how-to-show-android-checkbox-at-right-side
    -->
    <CheckBox
        android:id="@+id/expenseItemInfoGeolocationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/expenseItemInfoGeolocationButton"
        android:layout_alignBaseline="@+id/expenseItemInfoGeolocationButton"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/geolocation_checkbox"
        android:textColor="?android:attr/textColorTertiary"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />
    
    <TextView
        android:id="@+id/expenseItemInfoDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoGeolocationRemoveButton"
        android:layout_marginTop="16dp"
        android:text="@string/expense_item_info_description" />
    
    <EditText
        android:id="@+id/expenseItemInfoDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseItemInfoDescriptionTextView"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_text_hint_text"
        android:inputType="textMultiLine|textCapSentences" />

</RelativeLayout>
